Update Gradle to v8 (#49)
* Bump org.apache.logging.log4j:log4j-core from 2.19.0 to 2.20.0

Bumps [org.apache.logging.log4j:log4j-core](https://github.com/apache/logging-log4j2) from 2.19.0 to 2.20.0.
- [Release notes](https://github.com/apache/logging-log4j2/releases)
- [Changelog](https://github.com/apache/logging-log4j2/blob/release-2.x/CHANGELOG.adoc)
- [Commits](https://github.com/apache/logging-log4j2/compare/rel/2.19.0...rel/2.20.0)

---
updated-dependencies:
- dependency-name: org.apache.logging.log4j:log4j-core
  dependency-type: direct:production
  update-type: version-update:semver-minor
...

Signed-off-by: dependabot[bot] <support@github.com>

* Bump org.apache.logging.log4j:log4j-api from 2.19.0 to 2.20.0

Bumps [org.apache.logging.log4j:log4j-api](https://github.com/apache/logging-log4j2) from 2.19.0 to 2.20.0.
- [Release notes](https://github.com/apache/logging-log4j2/releases)
- [Changelog](https://github.com/apache/logging-log4j2/blob/release-2.x/CHANGELOG.adoc)
- [Commits](https://github.com/apache/logging-log4j2/compare/rel/2.19.0...rel/2.20.0)

---
updated-dependencies:
- dependency-name: org.apache.logging.log4j:log4j-api
  dependency-type: direct:production
  update-type: version-update:semver-minor
...

Signed-off-by: dependabot[bot] <support@github.com>

* Bump com.github.johnrengelman.shadow from 7.1.2 to 8.1.0

Bumps com.github.johnrengelman.shadow from 7.1.2 to 8.1.0.

---
updated-dependencies:
- dependency-name: com.github.johnrengelman.shadow
  dependency-type: direct:production
  update-type: version-update:semver-major
...

Signed-off-by: dependabot[bot] <support@github.com>

* Squashed commit of the following:

commit 5a739a70c37da51b2e8a4eba34b626103f1c4f5c
Author: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>
Date:   Thu Mar 2 22:07:59 2023 +0000

    Bump org.jetbrains:annotations from 24.0.0 to 24.0.1

    Bumps [org.jetbrains:annotations](https://github.co

--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'java'
     id 'maven-publish'
     id 'org.tenne.rest' version '0.4.2'
-    id 'com.github.johnrengelman.shadow' version "7.1.2"
+    id 'com.github.johnrengelman.shadow' version "8.1.0"
 }
 
 static String getGroup() { return "net.cybercake.cyberapi"; }
@@ -70,18 +70,18 @@ subprojects { Project subProject ->
         withSourcesJar()
     }
 
-    tasks.withType(JavaCompile) {
+    tasks.withType(JavaCompile).configureEach {
         options.encoding = 'UTF-8'
     }
 
-    task copyArtifacts {
+    tasks.register('copyArtifacts') {
         doLast {
             def NEW_DIR = "${getRootProject().buildDir}/artifacts"
             def SRC_DIR = "${buildDir}/libs"
 
             ant.copy(todir: NEW_DIR) {
                 fileset(dir: SRC_DIR,
-                        includes:"**/cyberapi-*.jar"
+                        includes: "**/cyberapi-*.jar"
                 )
             }
         }
@@ -90,10 +90,10 @@ subprojects { Project subProject ->
     sourceCompatibility = javaVersion
     targetCompatibility = javaVersion
 
-    task createProperties {
+    tasks.register('createProperties') {
         doLast {
             File file = new File(this.getBuildDir().getAbsolutePath() + File.separator + getProject().getName() + "-build.properties");
-            if(!file.exists()) {
+            if (!file.exists()) {
                 file.getParentFile().mkdirs()
                 file.createNewFile()
             }
@@ -148,9 +148,9 @@ subprojects { Project subProject ->
     }
 
     jar {
-        archiveName = "cyberapi-" + getProject().getName() + "-b" + build + ".jar"
-        sourcesJar.archiveName("cyberapi-" + getProject().getName() + "-sources-b" + build + ".jar")
-        javadocJar.archiveName("cyberapi-" + getProject().getName() + "-javadoc-b" + build + ".jar")
+        setArchiveFileName(null)
+        sourcesJar.setArchiveFileName("cyberapi-" + getProject().getName() + "-sources-b" + build + ".jar")
+        javadocJar.setArchiveFileName("cyberapi-" + getProject().getName() + "-javadoc-b" + build + ".jar")
 
         from (this.getBuildDir().getAbsolutePath() + File.separator + getProject().getName() + "-build.properties")
         manifest {
@@ -181,18 +181,17 @@ subprojects { Project subProject ->
     dependencies {
         if(!subProject.getName().contains("common")) {
             // cyberapi
-            implementation project(path: ':common', configuration: 'shadow')
+            implementation project(path: ':common')
         }
     }
 
     shadowJar {
-        archiveClassifier.set('')
-        archiveName = "cyberapi-" + getProject().getName() + "-b" + build.toString() + ".jar"
+        archiveFileName.set("cyberapi-" + getProject().getName() + "-b" + build.toString() + ".jar")
 
         sourceCompatibility = javaVersion
         targetCompatibility = javaVersion
 
-        tasks.withType(Javadoc) {
+        tasks.withType(Javadoc).configureEach {
             options.addStringOption("Xdoclint:none", '-quiet')
         }
 
