--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,8 @@ static int getTargetJavaVersion() { return 17; }
 
 
 
-def getLatestTag = new JsonSlurper().parse(new URL("https://api.github.com/repos/CyberedCake/CyberAPI/releases/latest")).tag_name
+// def getLatestTag = new JsonSlurper().parse(new URL("https://api.github.com/repos/CyberedCake/CyberAPI/releases/latest")).tag_name
+def getLatestLag = "117"
 
 def currentBuild = {
     String tagSplit = getLatestTag
