--- a/bungee/build.gradle
+++ b/bungee/build.gradle
@@ -13,6 +13,7 @@ dependencies {
     // adventure API (https://docs.adventure.kyori.net/)
     implementation "net.kyori:adventure-text-serializer-legacy:4.13.1"
     implementation "net.kyori:adventure-text-serializer-plain:4.13.1"
+    implementation "net.kyori:adventure-platform-bungeecord:4.3.0"
 
     compileOnly "net.kyori:adventure-api:4.13.1"
     compileOnly 'net.kyori:adventure-text-minimessage:4.13.1'
@@ -20,7 +21,7 @@ dependencies {
     // bungeecord and plugin hooks
     compileOnly 'net.md-5:bungeecord-api:1.19-R0.1-SNAPSHOT'
     compileOnly 'net.luckperms:api:5.4'
-    compileOnly 'dev.simplix:protocolize-api:2.2.6'
+    // compileOnly 'dev.simplix:protocolize-api:2.2.6'
 
     // utils
     implementation 'org.reflections:reflections:0.10.2'
