--- a/spigot/build.gradle
+++ b/spigot/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     compileOnly "net.kyori:adventure-api:4.13.1"
     compileOnly "net.kyori:adventure-text-serializer-legacy:4.13.1"
     compileOnly "net.kyori:adventure-text-minimessage:4.13.1"
+    implementation 'net.kyori:adventure-platform-bukkit:4.3.0'
 
     // spigot and plugin hooks
     compileOnly 'com.comphenix.protocol:ProtocolLib:5.0.0'
