--- a/bungee/build.gradle
+++ b/bungee/build.gradle
@@ -14,9 +14,8 @@ dependencies {
     implementation "net.kyori:adventure-text-serializer-legacy:4.14.0"
     implementation "net.kyori:adventure-text-serializer-plain:4.14.0"
     implementation "net.kyori:adventure-platform-bungeecord:4.3.0"
-
-    compileOnly "net.kyori:adventure-api:4.14.0"
-    compileOnly 'net.kyori:adventure-text-minimessage:4.14.0'
+    implementation "net.kyori:adventure-api:4.14.0"
+    implementation 'net.kyori:adventure-text-minimessage:4.14.0'
 
     // bungeecord and plugin hooks
     compileOnly 'net.md-5:bungeecord-api:1.20-R0.1-SNAPSHOT'
@@ -25,7 +24,6 @@ dependencies {
 
     // utils
     implementation 'org.reflections:reflections:0.10.2'
-    implementation 'org.apache.commons:commons-lang3:3.12.0'
 }
 
 shadowJar {
