--- a/spigot/build.gradle
+++ b/spigot/build.gradle
@@ -12,7 +12,7 @@ repositories {
         url = 'https://repo.extendedclip.com/content/repositories/placeholderapi/'
     }
     maven { url "https://repo.dmulloy2.net/repository/public/" }
-    maven { url "https://libraries.minecraft.net" }
+    maven { url 'https://libraries.minecraft.net/' }
     maven { url = 'https://repo.extendedclip.com/content/repositories/placeholderapi/' }
 }
 
