Fix not publishing shadow jar

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -46,7 +46,7 @@ jobs:
         with:
           path: 'build/common-build.properties'
           property: 'buildNumber'
-      - name: Release CyberAPI
+      - name: Release CyberAPI to GitHub
         uses: ncipollo/release-action@v1.10.0
         with:
           artifacts: "build/artifacts/*.jar"
@@ -66,3 +66,10 @@ jobs:
             
             If you really want to though, you can [click here](https://jitpack.io/#${{ github.event.repository.full_name }}/${{ steps.build.outputs.value }}) for the JitPack link!
           generateReleaseNotes: true
+      - name: Release CyberAPI to Nexus
+        uses: gradle/gradle-build-action@bd5760595778326ba7f1441bcf7e88b49de61a25
+        with:
+          arguments: publish
+        env:
+          NEXUS_USERNAME: ${{ secrets.NEXUS_USERNAME }}
+          NEXUS_PASSWORD: ${{ secrets.NEXUS_PASSWORD }}
