--- a/common/build.gradle
+++ b/common/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     // log4j
     compileOnly 'org.apache.logging.log4j:log4j-api:2.22.1'
     compileOnly 'org.apache.logging.log4j:log4j-core:2.23.1'
+    compileOnly 'net.luckperms:api:5.4'
 
     implementation 'org.jetbrains:annotations:24.1.0'
     implementation 'com.google.code.gson:gson:2.10.1'
