--- a/build.gradle
+++ b/build.gradle
@@ -224,7 +224,7 @@ subprojects { Project subProject ->
     dependencies {
         if (!subProject.getName().contains("common")) {
             // cyberapi
-            implementation project(path: ':common')
+            implementation project(path: ':common', configuration: 'shadow')
         }
     }
 
