--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,6 @@ import groovy.json.JsonSlurper
 plugins {
     id 'java'
     id 'maven-publish'
-    id 'org.tenne.rest' version '0.4.2'
     id 'com.github.johnrengelman.shadow' version "8.1.1"
 }
 
@@ -14,8 +13,8 @@ static URL getWebsite() { return new URL("https://github.com/CyberedCake/CyberAP
 static String getDescription() { return "The new and improved CyberAPI!"; }
 static String[] getAuthors() { return new String[]{"CyberedCake"}; }
 static int getTargetJavaVersion() { return 17; }
-static boolean isTestingEnvironment() { return Boolean.FALSE.booleanValue(); }
-static boolean isOffline() { return Boolean.FALSE.booleanValue(); }
+static boolean isTestingEnvironment() { return false; }
+static boolean isOffline() { return false; }
 
 
 
@@ -23,7 +22,7 @@ static boolean isOffline() { return Boolean.FALSE.booleanValue(); }
 
 def getLatestTag
 try {
-    if(isOffline()) {
+    if (isOffline()) {
         throw new IllegalStateException("Offline mode set to 'TRUE'")
     }
     getLatestTag = new JsonSlurper().parse(new URL("https://api.github.com/repos/CyberedCake/CyberAPI/releases/latest")).tag_name
