--- a/common/build.gradle
+++ b/common/build.gradle
@@ -18,7 +18,7 @@ repositories {
 
 dependencies {
     // servers
-    compileOnly 'net.md-5:bungeecord-api:1.21-R0.1-SNAPSHOT'
+    compileOnly 'net.md-5:bungeecord-api:1.21-R0.4-SNAPSHOT'
     compileOnly 'org.spigotmc:spigot-api:1.21-R0.1-SNAPSHOT'
 
     // adventure API (https://docs.adventure.kyori.net/)
@@ -31,7 +31,7 @@ dependencies {
     compileOnly 'org.apache.logging.log4j:log4j-core:2.23.1'
     compileOnly 'net.luckperms:api:5.4'
 
-    implementation 'org.jetbrains:annotations:24.1.0'
+    implementation("org.jetbrains:annotations:26.+")
     implementation 'com.google.code.gson:gson:2.11.0'
 }
 
