--- a/spigot/build.gradle
+++ b/spigot/build.gradle
@@ -24,7 +24,7 @@ dependencies {
     implementation 'net.kyori:adventure-platform-bukkit:4.3.3'
 
     // spigot and plugin hooks
-    compileOnly 'com.comphenix.protocol:ProtocolLib:5.1.0'
+    compileOnly 'net.dmulloy2:ProtocolLib:5.4.0'
     compileOnly 'org.spigotmc:spigot-api:1.21-R0.1-SNAPSHOT'
     compileOnly 'net.luckperms:api:5.4'
     compileOnly 'me.clip:placeholderapi:2.11.5'
